<resources>
    <string name="app_name">Wear Battery Full</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="battery_notification_title_template">Battery: %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="battery_notification_text_template">You said %1$s and lorem ipsum.
    </string>

    <string name="level_notification_title_template">Level: %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="level_notification_text">The watch battery is at %1$s percent.
    </string>
    <string name="pref_charging">Show Battery Charging</string>
    <string name="pref_show_charging_summary_on">Notification dock will show if the watch is charging.</string>
    <string name="pref_show_charging_summary_off">Notification dock will not show if the watch is charging.</string>
    <string name="pref_exact_battery_level">Show battery level</string>
    <string name="pref_exact_battery_level_summary_on">This may affect phone battery life if on.</string>
    <string name="pref_exact_battery_level_summary_off">The watch battery level will not be shown on the notification dock.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_select_ringtone">Notification Sound</string>
    <string name="pref_select_ringtone_summary">Set the sound for notifications</string>
    <string name="pref_vibrate">Vibrate</string>
    <string name="pref_vibrate_summary_on">Notifications will cause phone to vibrate.</string>
    <string name="pref_vibrate_summary_off">Will not vibrate on notifications.</string>
    <string name="main_activity_intro">This app will alert you when the battery on your Android Wear device is fully charged.</string>
    <string name="main_button">Go to Settings</string>
    <string name="pref_disconnected">Notify if wear device disconnected</string>
    <string name="pref_insistent">Repeat alert until dismissed</string>
    <string name="pref_insistent_summary">The device will continue to alert until you read the notification or dismiss it.</string>
    <string name="write_review">Write Review</string>
    <string name="key_pref_battery_charging">battery_charging</string>
    <string name="key_pref_exact_battery_level">exact_battery_level</string>
    <string name="key_pref_ringtone_uri">ringtone_uri</string>
    <string name="key_pref_charge_level_alert">charge_level_alert</string>
    <string name="key_pref_vibrate">vibrate</string>
    <string name="key_pref_light">light</string>
    <string name="key_pref_color">color</string>
    <string name="key_pref_insistent">insistent</string>
    <string name="key_pref_disconnected">disconnected</string>

</resources>
