<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="Settings">
        <CheckBoxPreference
            android:key="@string/key_pref_battery_charging"
            android:title="@string/pref_charging"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:dependency="@string/key_pref_battery_charging"
            android:key="@string/key_pref_exact_battery_level"
            android:title="@string/pref_exact_battery_level"
            android:defaultValue="true"
            />
        <ListPreference
            android:key="@string/key_pref_charge_level_alert"
            android:title="Alert at Level"
            android:entries="@array/level_entries"
            android:entryValues="@array/level_values"
            android:defaultValue="100"
            android:summary="%s"

            />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="Notifications">
        <CheckBoxPreference
            android:key="@string/key_pref_vibrate"
            android:title="@string/pref_vibrate"
            android:defaultValue="true"
            />
        <RingtonePreference
            android:key="@string/key_pref_ringtone_uri"
            android:title="@string/pref_select_ringtone"
            android:showDefault="true"
            android:ringtoneType="notification"
            android:showSilent="true"
            android:defaultValue="content://settings/system/notification_sound"
            />

        <CheckBoxPreference
            android:key="@string/key_pref_light"
            android:title="Light"
            android:defaultValue="true"
            />
        <ListPreference
            android:key="@string/key_pref_color"
            android:dependency="@string/key_pref_light"
            android:title="LED Color"
            android:entries="@array/color_entries"
            android:entryValues="@array/color_values"
            android:defaultValue="-256"
            android:summary="%s"

            />
        <CheckBoxPreference
            android:key="@string/key_pref_insistent"
            android:title="@string/pref_insistent"
            android:summary="@string/pref_insistent_summary"
            android:defaultValue="false"
            />


    </PreferenceCategory>

    <PreferenceCategory
        android:title="Other">
        <CheckBoxPreference
            android:key="@string/key_pref_disconnected"
            android:title="@string/pref_disconnected"
            android:defaultValue="true" />
        </PreferenceCategory>
</PreferenceScreen>